Minor styling fixes for getting-started on mobile

--- a/css/secondary-controls.css
+++ b/css/secondary-controls.css
@@ -2,6 +2,7 @@
 	position: absolute;
 	left: 0;
 	bottom: 0;
+	z-index: 5;
 	width: 100%;
 	height: 6rem;
 	line-height: 4rem;
